--- a/styles.css
+++ b/styles.css
@@ -270,6 +270,35 @@ div#slideshow ul#slide_nav {
 	color: #EEAC2B;
 	text-decoration: none;
 	padding-left: 32px;
-}#footer_copyright a:hover {
+}
+#footer_copyright a:hover {
 	color: #B88828;
 }
+#lean_overlay {
+	position: fixed;
+    z-index:100;
+    top: 0px;
+    left: 0px;
+    height:500px;
+    width:650px;
+    background: #fff;
+    display:none;
+}
+#la-message {
+    width: 650px;
+    height: 500px;
+	padding: 30px; 
+    display:none;
+	background: #FFF;
+    border-radius: 5px; 
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.7); 
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); 
+    -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7);
+
+
+}
+
+
+
